0x02-functions_nested_loops/104-fibonacci.c:10:16:
igned long long a = 1; /* first fibonacci number */
      |                ^~~~
104-fibonacci.c:11:16: error: ISO C90 does not support ‘long long’ [-Werror=long-long]
   11 |  unsigned long long b = 2; /* second fibonacci number */
      |                ^~~~
104-fibonacci.c:13:9: error: ISO C90 does not support the ‘ll’ gnu_printf length modifier [-Werror=format=]
   13 |  printf("%llu, %llu", a, b);
      |         ^~~~~~~~~~~~
104-fibonacci.c:13:9: error: ISO C90 does not support the ‘ll’ gnu_printf length modifier [-Werror=format=]
104-fibonacci.c:15:2: error: ‘for’ loop initial declarations are only allowed in C99 or C11 mode
   15 |  for (int i = 3; i <= 98; i++)
      |  ^~~
104-fibonacci.c:15:2: note: use option ‘-std=c99’, ‘-std=gnu99’, ‘-std=c11’ or ‘-std=gnu11’ to compile your code
104-fibonacci.c:17:17: error: ISO C90 does not support ‘long long’ [-Werror=long-lon
